--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">Картинка дня</string>
-    <string name="description">Описание</string>
+    <string name="description">ОПИСАНИЕ</string>
     <string name="wiki_search_helper_text">Поиск в Википедии</string>
     <string name="wiki_search_word_empty">Вы не указали слово для поиска</string>
-
     <string name="searched_query">Ищем описание для:</string>
     <string name="searched_at_wiki">Найдено в Википедии:</string>
+    <string name="theme_green">Зелёная тема</string>
+    <string name="theme_red">Красная тема</string>
 </resources>
