Урок 03. Переработан интерфейс, добавлены BottomNavigationView, TabLayout, ViewPager2, загрузка картинки дня за 2 предыдущих дня.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="searched_at_wiki">Найдено в Википедии:</string>
     <string name="theme_green">Зелёная тема</string>
     <string name="theme_red">Красная тема</string>
+    <string name="ereyesterday">Позавчера</string>
+    <string name="yesterday">Вчера</string>
+    <string name="today">Сегодня</string>
 </resources>
